--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,9 @@
 AWS_REGION=
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
-REDIS_ADDR="redis://redis:6379"
-DATABASE_URL="root:example@tcp(db:3306)/s3-clone?charset=utf8mb4&parseTime=True&loc=Local"
+REDIS_ADDR="redis:6379"
+DATABASE_URL="root:example@tcp(db:3306)/clone?charset=utf8mb4&parseTime=True&loc=Local"
 AWS_EMAIL=""
 APP_URL="http://localhost:8080"
+MYSQL_ROOT_PASSWORD=example
+MYSQL_DATABASE=clone
