--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-
 services:
   server:
     build: .
@@ -11,17 +10,18 @@ services:
         condition: service_healthy
       redis:
         condition: service_started
+    networks:
+      - s3-clone    
   db:
-    image: mysql:8.0
-    container_name: mysql-db
+    image: mysql:latest
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: example
-      MYSQL_DATABASE: s3-clone
+       MYSQL_ROOT_PASSWORD: example
+       MYSQL_DATABASE: clone
     ports:
       - "3306:3306"
     volumes:
-      - mysql-data:/var/lib/mysql
+      - s3-clone-mysql-new-data:/var/lib/mysql
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-p${MYSQL_ROOT_PASSWORD}"]
       interval: 10s
@@ -29,17 +29,20 @@ services:
       retries: 5
     networks:
       - s3-clone
+
   redis:
-    image: redis:7
+    image: redis:latest
     container_name: redis
     ports:
       - "6379:6379"
     volumes:
-      - redis-data:/data
+      - s3-clone-new-redis-data:/data
     networks:
       - s3-clone
-      
-      
+
+volumes:
+  s3-clone-mysql-new-data:
+  s3-clone-new-redis-data:
 
 networks:
   s3-clone:
