--- a/Dockerfile.worker
+++ b/Dockerfile.worker
@@ -1,37 +1,15 @@
-# =========================
-# Stage 1: Build stage
-# =========================
+# Stage 1: Build
 FROM golang:1.25.1 AS builder
-
-# Set working directory
 WORKDIR /app
-
-# Enable Go modules
-ENV GO111MODULE=on
-ENV CGO_ENABLED=0
-
-# Copy go.mod and go.sum first for caching
+ENV GO111MODULE=on CGO_ENABLED=0
 COPY go.mod go.sum ./
-
-# Download dependencies
 RUN go mod download
-
-# Copy the rest of the project
 COPY . .
-
-# Build the worker binary
 RUN go build -o s3worker ./cmd/worker/main.go
 
-# =========================
-# Stage 2: Runtime stage
-# =========================
+# Stage 2: Runtime
 FROM debian:bookworm-slim
-
-# Set working directory
 WORKDIR /app
-
-# Copy the compiled binary from builder
 COPY --from=builder /app/s3worker .
 
-# Default command
 CMD ["./s3worker"]
